




syntax = "proto2";

option java_package = "com.ucloudlink.framework.protocol.protobuf";
option java_outer_classname = "Common";
option optimize_for = LITE_RUNTIME;

message PlmnInfo {
	required string plmn = 1;   
	
	optional uint32  rat  = 2;   
	optional uint32  rssi=  3;   
	optional uint32  band = 4 ;
}

message file_opt_config_param{
	optional string auto_cfg = 1;
	optional string manual_cfg = 2;
	optional uint32 action = 3;
	optional uint32 fon_fre = 4;
	optional uint32 fon_time = 5;
	optional uint32	total_size = 6;
	optional uint32 file_size = 7;
}

enum Gps_switch_state 
{
	SWITCH_OFF = 0;
	SWITCH_ON = 1;
}

message auto_switch_vsim_cfg_type
{
	required uint32 	strategy_enable = 1;	
	required uint32	stop_enable = 2;		
	required uint32	normal_switch_count = 3;
	required uint32	first_switch_count = 4;	
	required uint32	first_delay_time = 5;	
	required uint32	second_switch_count = 6;
	required uint32	second_delay_time = 7;	
	required uint32	loop_switch_time = 8;	
	required uint32	is_logout_reset = 9;	
}